 core_did_list() and core_did_get() function calls in their place. See the source
 code for specifics about these calls.

 WARNING: MoH has been changed to convert MP3 into WAV format using mpg123 and
 sox. If you do not have one or both of these installed you should install them.
 You can revert to the previous behavior by setting: AMPMPG123=false in the
 amportal.conf file.

 AMPORTAL CONF NEW SETTINGS:

 USEDEVSTATE = true|false 
 DEFAULT VALUE: false
 If this is set, it assumes that you are running Asterisk 1.4 or higher and want 
 to take advantage of the func_devstate.c backport available from Asterisk 1.6 
 which allows custom hints to be created to support BLF for server side feature 
 codes such as daynight, followme, etc.

 MODULEADMINWGET=true|false 
 DEFAULT VALUE: false
 Module Admin normally tries to get its online information through direct file 
 open calls to URLs that go back to the freepbx.org server. If it fails, typically 
 because of content filters in firewalls that don't like the way PHP formats the 
 requests, the code will fall back and try a wget to pull the information.  This 
 will often solve the problem. However, in such environemnts there can be a 
 significant timeout before the failed file open calls to the URLs return and 
 there are often 2-3 of these that occur. Setting this value will force FreePBX 
 to avoid the attempt to open the URL and go straight to the wget calls.

 AMPDISABLELOG=true|false 
 DEFAULT VALUE: true
 Whether or not to invoke the freepbx log facility

 AMPSYSLOGLEVEL=LOG_EMERG|LOG_ALERT|LOG_CRIT|LOG_ERR|LOG_WARNING|LOG_NOTICE|
                LOG_INFO|LOG_DEBUG|LOG_SQL|SQL 
 DEFAULT VALUE: LOG_ERR
 Where to log if enabled, SQL, LOG_SQL logs to old MySQL table, others are passed 
 to syslog system to determine where to log

 AMPENABLEDEVELDEBUG=true|false 
 DEFAULT VALUE: false
 Whether or not to include log messages marked as 'devel-debug' in the log system

 AMPMPG123=true|false 
 DEFAULT VALUE: true